--- a/models/dwh/models.yml
+++ b/models/dwh/models.yml
@@ -2,6 +2,10 @@ version: 2
 
 
 models:
+  - name: af_monthly_playback_stats
+
+  - name: af_yearly_stats
+
   - name: d_album
     columns:
       - name: pk_album
@@ -28,9 +32,21 @@ models:
         tests:
           - unique
           - not_null
-      - name: calendar_date
+      - name: date_day
         tests:
           - unique
+          - not_null
+      - name: date_week
+        tests:
+          - not_null
+      - name: date_month
+        tests:
+          - not_null
+      - name: date_quarter
+        tests:
+          - not_null
+      - name: date_year
+        tests:
           - not_null
       - name: is_working_day
         tests:
