--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = "^23.1.0"
 ruff = "^0.0.252"
 vermin = "^1.5.1"
 shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.17.0"}
+ipython = "^8.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
