--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ ruff = "^0.0.252"
 vermin = "^1.5.1"
 shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.17.0"}
 ipython = "^8.10.0"
+ipdb = "^0.13.11"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
