--- a/models/dwh/metrics.yml
+++ b/models/dwh/metrics.yml
@@ -45,3 +45,31 @@ metrics:
       - fk_artist
       - fk_album
       - fk_track
+
+  - name: days_known
+    label: Days Known
+
+    calculation_method: derived
+    expression: "datediff('day', {{ metric('discovery_date') }}, current_date)"
+
+    timestamp: playback_timestamp
+    time_grains: [day, week, month, quarter, year]
+
+    dimensions:
+      - fk_artist
+      - fk_album
+      - fk_track
+
+  - name: playback_frequency
+    label: Playback Frequency
+
+    calculation_method: derived
+    expression: "cast({{ metric('playback_count') }} as float) / {{ metric('days_known') }}"
+
+    timestamp: playback_timestamp
+    time_grains: [day, week, month, quarter, year]
+
+    dimensions:
+      - fk_artist
+      - fk_album
+      - fk_track
